// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no features 1`] = `
<div
  className="DivSequenceRendering"
  height="200px"
  style={
    Object {
      "position": "relative",
    }
  }
  width="100px"
>
  Hello world
</div>
`;

exports[`one feature 1`] = `
<div
  className="DivSequenceRendering"
  height="200px"
  style={
    Object {
      "position": "relative",
    }
  }
  width="333.3333333333333px"
>
  Hello world
</div>
`;
